
## 20220506 
* Toegevoegd in handleiding: vereiste Windows PowerShell 5
* Toegevoegd in handleiding: Tips en trucs: SDS Flow Connector en CSV file synchronisatie automatiseren

## 20220701
* Eerste release v1.0.0 op GitHub. Waarom heb ik dat niet eerder gedaan?

## 20220718
* Export-SchoolDataSync.ps1: snelheidsverhoging door gebruik van arraylists. Typische uitvoertijd is nu 30 seconden.
* Export-SchoolDataSync.ps1: teams bepaald door harde match van docentgroepvak met leerling-lesgroep/klas. Dit werkt eenvoudiger, betrouwbaarder en sneller.
* Export-SchoolDataSync.ps1: configuratieparameter bon_match_docentlesgroep_aan_leerlingklas is overbodig geworden.

## 20220719
* Export-SchoolDataSync.ps1: bugfix: uitvoer leeg, want vergat tabel teamactief aan te maken.

## 20230921
* Import-Magister.ps1: 
** Leerling-CSV bevat ook groepen en vakken.
** Docenten-CSV bevat ook groepvakken, klasvakken en docentvakken.
* Export-SchoolDataSync.ps1:
** Test op lege records die uit docenten-CliXML worden gelezen.
** Console boodschappen

## 20240222
* Export-Magister.ps1:
** wijziging: configuratievariabele 'brin' heet nu 'schoolid'
** toevoeging: voorbeeldscript voor ophalen medewerker UPN m.b.v. Microsoft Graph PowerShell SDK.

## TO DO
Dit zijn geplande wijzigingen zonder een vastgesteld tijdpad (krabbels van de auteur).

* SDS V2.1 format 
* ondersteuning voor synchronisereren van verscheidene scholen naar één profiel in School Data Sync v2.
* parameter viewonly toont resultaat.
* controleer omgang met ongeldige tekens, https://support.microsoft.com/en-us/office/invalid-file-names-and-file-types-in-onedrive-and-sharepoint-64883a5d-228e-48f5-b3d2-eb39e07630fa?ui=en-us&rs=en-us&ad=us#invalidcharacters
* configuratievariabele toevoegen om het toevoegen van de vakomschrijving aan de teamnaam facultatief te maken.
* configuratievariabelen moeten in een eigen structuur worden bewaard.
* verwijder of vervang komma's uit teamnamen voor een betere verwerking tijdens group cleanup.