@@ -200,10 +200,16 @@ Toevoeging configuratieparameter bon_match_docentlesgroep_aan_leerlingklas voor 
 ** wijziging: configuratievariabele 'brin' heet nu 'schoolid'
 ** toevoeging: voorbeeldscript voor ophalen medewerker UPN m.b.v. Microsoft Graph PowerShell SDK.
 
+## 20240222a
+* Export-Magister:
+** toegevoegd ondersteuning voor verscheidene scholen aan SDS v2. 
+** toegevoegd configuratievariabele 'exportverzamelmap' voor toevoegen 
+* documentatie bijgewerkt
+
 ## TO DO
 Dit zijn geplande wijzigingen zonder een vastgesteld tijdpad (krabbels van de auteur).
 
-* SDS V2.1 format 
+* SDS CSV V2.1 format 
 * ondersteuning voor synchronisereren van verscheidene scholen naar één profiel in School Data Sync v2.
 * parameter viewonly toont resultaat.
 * controleer omgang met ongeldige tekens, https://support.microsoft.com/en-us/office/invalid-file-names-and-file-types-in-onedrive-and-sharepoint-64883a5d-228e-48f5-b3d2-eb39e07630fa?ui=en-us&rs=en-us&ad=us#invalidcharacters
